--- a/index.html
+++ b/index.html
@@ -463,41 +463,41 @@
     <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
       <div class="grid gap-4 animate-on-scroll" data-delay="200">
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/18274181/pexels-photo-18274181.jpeg" alt="Gallery 1">
+          <img class="w-full h-full object-cover" src="Tawaf of Kaaba.webp" alt="Gallery 1">
           <div class="gallery-label">Tawaf of Kaaba</div>
         </div>
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/15369686/pexels-photo-15369686.jpeg" alt="Gallery 2">
+          <img class="w-full h-full object-cover" src="Masjid Al Nabwi.webp" alt="Gallery 2">
           <div class="gallery-label">Masjid al-Nabawi</div>
         </div>
       </div>
       <div class="grid gap-4 animate-on-scroll" data-delay="300">
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/8059446/pexels-photo-8059446.jpeg" alt="Gallery 3">
+          <img class="w-full h-full object-cover" src="Evening Prayer.webp" alt="Gallery 3">
           <div class="gallery-label">Evening Prayers</div>
         </div>
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/30768739/pexels-photo-30768739.jpeg" alt="Gallery 4">
+          <img class="w-full h-full object-cover" src="Zam Zam.webp" alt="Gallery 4">
           <div class="gallery-label">Zamzam Water</div>
         </div>
       </div>
       <div class="grid gap-4 animate-on-scroll" data-delay="400">
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/12765598/pexels-photo-12765598.jpeg" alt="Gallery 5">
+          <img class="w-full h-full object-cover" src="Mount Uhud.webp" alt="Gallery 5">
           <div class="gallery-label">Mount Uhud Ziarat</div>
         </div>
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/29343443/pexels-photo-29343443.jpeg" alt="Gallery 6">
+          <img class="w-full h-full object-cover" src="Comfort Journey.webp" alt="Gallery 6">
           <div class="gallery-label">Journey in Comfort</div>
         </div>
       </div>
       <div class="grid gap-4 animate-on-scroll" data-delay="500">
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/28902955/pexels-photo-28902955.jpeg" alt="Gallery 7">
+          <img class="w-full h-full object-cover" src="Reflective Moments.webp" alt="Gallery 7">
           <div class="gallery-label">Reflective Moments</div>
         </div>
         <div class="gallery-item rounded-lg shadow-md hover:shadow-xl transition-shadow cursor-pointer aspect-[4/5] overflow-hidden">
-          <img class="w-full h-full object-cover" src="https://images.pexels.com/photos/15948383/pexels-photo-15948383.jpeg" alt="Gallery 8">
+          <img class="w-full h-full object-cover" src="Group Guidance.webp" alt="Gallery 8">
           <div class="gallery-label">Group Guidance</div>
         </div>
       </div>
