--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       <!-- Package Card 1 -->
       <div class="bg-white/70 backdrop-blur-sm rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-all duration-300 group animate-on-scroll flex flex-col" data-delay="200">
         <img 
-          src="https://i.ibb.co/1tdcNGcp/Riyazul-Jannah-Poster-3.webp" 
+          src="rj-post-1.webp" 
           alt="Economy Umrah Package Poster" 
           class="w-full aspect-[4/5] object-cover cursor-pointer group-hover:opacity-90 transition-opacity duration-300"
           onclick="showModal(this.src)"
@@ -412,7 +412,7 @@
       <div class="bg-white/70 backdrop-blur-sm rounded-2xl shadow-xl overflow-hidden transform hover:-translate-y-2 transition-all duration-300 group animate-on-scroll border-2 border-sky-500 flex flex-col" data-delay="300">
         <div class="relative">
           <img 
-            src="https://i.ibb.co/4Qy5mD6/Riyazul-Jannah-Poster-2.webp" 
+            src="rj-post-2.webp" 
             alt="Deluxe Umrah Package Poster" 
             class="w-full aspect-[4/5] object-cover cursor-pointer group-hover:opacity-90 transition-opacity duration-300"
             onclick="showModal(this.src)"
@@ -423,7 +423,7 @@
       <!-- Package Card 3 -->
       <div class="bg-white/70 backdrop-blur-sm rounded-2xl shadow-lg overflow-hidden transform hover:-translate-y-2 transition-all duration-300 group animate-on-scroll flex flex-col" data-delay="400">
         <img 
-          src="https://i.ibb.co/cSH50fBd/Riyazul-Jannah-Poster-1.webp" 
+          src="rj-post-3.webp" 
           alt="Family Umrah Package Poster" 
           class="w-full aspect-[4/5] object-cover cursor-pointer group-hover:opacity-90 transition-opacity duration-300"
           onclick="showModal(this.src)"
@@ -792,4 +792,5 @@
     </script>
 </body>
 </html>
+
 
