--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 </div>
             </div>
             <div class="mt-12 border-t border-slate-700 pt-8 text-center text-slate-400 text-sm">
-                <p>&copy; 2024 Riyazul Jannah Tours. All Rights Reserved. <br> Designed By <a href="https://afcreation.online/"> AF DigiSpace </a></p>
+                <p>&copy; 2024 Riyazul Jannah Tours. All Rights Reserved. <br> Designed By <a href="https://afcreation.online/"> <strong> AF DigiSpace  </strong></a></p>
             </div>
         </div>
     </footer>
@@ -792,5 +792,6 @@
     </script>
 </body>
 </html>
+
 
 
